...
    lazy var searchField: UITextField = {
        let tf = UITextField()
        tf.borderStyle = .roundedRect
        tf.placeholder = "Start typing to search..."
        tf.delegate = self
        tf.translatesAutoresizingMaskIntoConstraints = false
        tf.accessibilityIdentifier = "SearchBar"
        
        return tf
    }()
    
    lazy var sortButton: UIButton = {
        let btn = UIButton()
        btn.configuration = .borderedProminent()
        btn.configuration?.attributedTitle = "Code"
        btn.setImage(UIImage(systemName: "arrow.up"), for: .normal)
        btn.translatesAutoresizingMaskIntoConstraints = false
        
        btn.addTarget(self, action: #selector(sortButtonPress), for: .touchUpInside)
        
        return btn
...
